# sample-mapillary-detections

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/: BeverlyHills.geojson
notebooks/: demo.ipynb  see_steps.ipynb
src/sample_mapillary_detections/: __init__.py  main.py  mapillary.py  sampling.py
