[project]
name = "sample-mapillary-detections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jay Qi", email = "jayqi@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "geopandas",
    "httpx",
    "matplotlib",
    "shapely",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython",
    "ipykernel",
]
