[project]
name = "sample-mapillary-detections"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jay Qi", email = "jayqi@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "geopandas",
    "geopy",
    "httpx",
    "loguru",
    "mapbox-vector-tile",
    "matplotlib",
    "pydantic",
    "shapely",
    "stamina",
    "tqdm",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython",
    "ipykernel",
    "ruff",
]

[tool.ruff]
line-length = 99
src = ["src", "notebooks"]

[tool.ruff.lint]
select = [
  "E", # Pyflakes
  "F", # Pycodestyle
  "I", # isort
]
unfixable = ["F"]

[tool.ruff.lint.isort]
known-first-party = ["reprexlite"]
known-third-party = ["IPython"]
force-sort-within-sections = true
